app.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

@font-face{
    font-family: myFont;
    src:url(WildWords.ttf);
}

.site-header{
    font-size: 26px;
    background-color: #e71313;
    box-sizing: border-box;
    justify-content: space-evenly;
    z-index: 3;
    position: sticky;
    top: 0;
}

.social-icon img{
    padding: 5px;
    width: 5%;
    position: relative;
    top: 5px;
}

.logo-img img{
    width:25%;
}

.menu {
    text-align: center;
    list-style-type: none;
    margin: 0;
    background-color: #e71313;
}

.menu-item{
    display: inline-block;
}

.menu-text{
    display: block;
    padding: 8px;
    color: #fff;
    text-decoration: none;
}

.menu-text:hover:not(.active){
    background-color: #740808;
}
.active {
    background-color: #ff7272;
}

.home-page{
    background: #8b8b8b;
}

.container{
    font-family: myFont;
    width: 100%;
    height: 150dvh;
    background: #222;
}

.swiper{
    width: 75%;
    height: fit-content;
}

.swiper-slide img{
    width: 100%;
}

.swiper .swiper-button-prev, .swiper .swiper-button-next{
    color: #fff;
}

.swiper .swiper-pagination-bullet-active{
    background: #e71313;
}

.cta{
    position: static;
    text-align: center;
}

.cta-icon img{
    display:inline-block;
}

.cta-icon1 img{
    width: 18%;
    position: relative;
    z-index: 2;
    border: 8px solid #740808;
}

.cta-icon2 img{
    width: 18%;
    position: relative;
    z-index: 2;
    border: 8px solid #740808;
}
.cta-icon3 img{
    width: 18%;
    position: relative;
    z-index: 2;
    border: 8px solid #740808;
}
.cta-icon4 img{
    width: 18%;
    position: relative;
    z-index: 2;
    border: 8px solid #740808;
}

